Fixed small PDF generation bug

--- a/Frontend/public/pdftemplate/template.html
+++ b/Frontend/public/pdftemplate/template.html
@@ -6,26 +6,26 @@
   </head>
   <body>
     <h2>Location Info</h2>
-      <ul>
-        <li>Location: {{current.name}}</li>
-        <li>Temperature: {{current.main.temp}} °C</li>
-        <li>Feels Like: {{current.main.feels_like}} °C</li>
-        <li>Minimum Temperature: {{current.main.min_temp}} °C</li>
-        <li>Maximum Temperature: {{current.main.max_temp}} °C</li>
-        <li>Humidity: {{current.main.humidity}} %</li>
-        <li>Cloudiness: {{current.clouds.all}} %</li>
-      </ul>
+    <ul>
+      <li>Location: {{current.name}}</li>
+      <li>Temperature: {{current.main.temp}} °C</li>
+      <li>Feels Like: {{current.main.feels_like}} °C</li>
+      <li>Minimum Temperature: {{current.main.temp_min}} °C</li>
+      <li>Maximum Temperature: {{current.main.temp_max}} °C</li>
+      <li>Humidity: {{current.main.humidity}} %</li>
+      <li>Cloudiness: {{current.clouds.all}} %</li>
+    </ul>
     <h2>Forecast</h2>
     {{#each forecast}}
-      <h3>{{this.date}}</h3>
-      <ul>
-        <li>Temperature: {{this.temp}}</li>
-        <li>Feels Like: {{this.feels_like}}</li>
-        <li>Minimum Temperature: {{this.min_temp}}</li>
-        <li>Maximum Temperature: {{this.max_temp}}</li>
-        <li>Humidity: {{this.humidity}}</li>
-        <li>Cloudiness: {{this.cloudiness}}</li>
-      </ul>
+    <h3>{{this.date}}</h3>
+    <ul>
+      <li>Temperature: {{this.temp}}</li>
+      <li>Feels Like: {{this.feels_like}}</li>
+      <li>Minimum Temperature: {{this.temp_min}}</li>
+      <li>Maximum Temperature: {{this.temp_max}}</li>
+      <li>Humidity: {{this.humidity}}</li>
+      <li>Cloudiness: {{this.cloudiness}}</li>
+    </ul>
     {{/each}}
   </body>
 </html>
